cleanup [platform]: deprecated API
GitOrigin-RevId: e48f953b465b1b0ae96e16f28749f20905559218